@@ -1,3 +1,8 @@
+2003/06/16 22:36 joered
+
+	* xs/Gtk2/GtkTextIter.xs: fixed a memory leak. Thanks to
+	  muppet for the hint.
+
 2003/06/16 14:31 muppetman
 
 	* xs/GtkStyle.xs, AUTHORS: patch from Tom Hargreaves (hex at freezone 
